traces/bug_437.txt
examples++-load/gmsh.cpp:441: error: DEAD_STORE
  The value written to &renumsurf (type int) is never used.
Showing all 1 steps of the trace


examples++-load/gmsh.cpp:441:19: Write of unused value
439.     string * pffname= GetAny<string *>((*filename)(stack));
440.     int renumsurf = 0; 
441.     if( nargs[1] )  renumsurf = GetAny<long>( (*nargs[1])(stack) );
                         ^
442.     assert( renumsurf <=1 && renumsurf >= 0);
443.   
